--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ body > * {
     margin-block: 1rem;
 }
 
+/* Game header */
+.game-header h1{
+    font-size: 3rem;
+}
+/* Game container and input cells */
 .game-container {
     display: grid;
     grid-template-columns: repeat(3, 132px);
@@ -41,4 +46,9 @@ body > * {
 
 .cell:hover {
     background: rgb(237, 234, 234);
+}
+
+/* Footer styling */
+.game-footer {
+    
 }
