--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ body > * {
     background: #EEDC82;
 }
 
-.cell:hover {
-    background: rgb(237, 234, 234);
+.game-container .hover-cell:hover {
+    background: rgb(203, 200, 200);
 }
 
 /* Footer styling */
