--- a/style.css
+++ b/style.css
@@ -34,13 +34,14 @@ body > * {
     display: grid;
     grid-template-columns: repeat(3, 132px);
     grid-template-rows: repeat(3, 132px);
-    gap: 0.2rem;
+    gap: 0.8rem; /*Added*/ 
 
     background: inherit; /*Added*/ 
 }
 
 .game-container .cell {
     background: #1f3540; /*Added*/
+    border-radius: 8px; /*Added*/ 
     font-weight: bold;
     font-size: 4rem;
 
@@ -52,7 +53,7 @@ body > * {
 }
 
 .game-container .hover-cell:hover {
-    background: rgb(203, 200, 200);
+    background:#a8bec97e; /*Added*/ 
 }
 
 /* Footer styling */
