--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body > * {
 }
 
 .game-container .winning-cell {
-    background: #EEDC82;
+    background:#2cc6be; /*Added*/ 
 }
 
 .game-container .hover-cell:hover {
