--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 :root {
-    --text-color:#a8bec9;
+    --text-color:#f7c23c;
     --background-color: #192a32;; 
     --cell-color: #1f3540; 
     --winning-cell-color: #2cc6be ; 
