--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body > * {
 }
 
 .game-footer .fa-github {
-    font-size: 1.6rem;
-    color: inherit;
+    font-size: 2rem;
+    color: initial;
 }
 
