--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body > * {
     font-weight: bold;
     font-size: 4rem;
 
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
     cursor: pointer;
 }
 
